# yeelowoon

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
cli/: __init__.py  drum2midi.py
docs/: ALGO.md  LOGIC_WORKFLOW.md  PAGES_TROUBLESHOOTING.md  RELEASE.md  WEB.md
engine/: __init__.py  io.py  midi.py  onset.py  pipeline.py  separation.py  tempo.py
scripts/: eval_separation.py
server/: Dockerfile  __init__.py  main.py
tests/: __init__.py  conftest.py  test_separation.py  test_synthetic.py
webui/public/: app.js  config.json  index.html  style.css
