[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drum2midi"
version = "0.1.0"
description = "Drum WAV separation and MIDI extraction for Logic Pro workflow"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "midiutil>=1.2.1",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
drum2midi = "cli.drum2midi:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
